@@ -5,6 +5,8 @@
   * Get changelogs also when package origin is from "Debian Backports" and not
     only "Debian", thanks Gerfried Fuchs (Closes: #714619)
 
+  * New sort policy 'debsize' for sorting by package size, thanks Marcel Partap
+
 - Bug fixes:
 
 - Documentation:
